# simultaneous_detection

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: 251105_O2_H2_Experiment_Overview.xlsx  251105_processed_O2_H2_data.h5  251120_O2_H2_Experiment_Overview.xlsx  251126_O2_H2_Experiment_Overview.xlsx  251204_O2_H2_Experiment_Overview.xlsx  ~$251120_O2_H2_Experiment_Overview.xlsx
data/H2_Data/: NB-318-Logger1.csv  NB-328-Logger1.csv  NB-329-Logger1.csv  NB-330-Logger3-during_irradiation.csv  NB-331-Logger4-during_irradiation.csv  NB-334-Logger3-during irradiation.csv  NB-337-Logger1.csv  NB-339-Logger3-during irradiation.csv  NB-349-Logger1.csv  NB-351-Logger4-during irradiation.csv  NB-353-Logger3-during irradiation.csv  NB-354-Logger2-during irradiation.csv  NB-356-Logger3-during irradiation.csv  NB-357-Logger1.csv  NB-359-Logger5-during irradiation.csv  NB-360-Logger1.csv  NB-362-Logger1.csv  NB-364-Logger3-during irradiation.csv  NB-365-Logger3-during irradiation.csv  NB-366-Logger1.csv  NB-367-Logger1.csv
data/O2_Data/: 2025-10-09_213411_NB-312-Ch2-3.txt  2025-10-21_172632_NB-319-Ch2-3.txt  2025-10-27_171920_NB-320-Ch2-7.txt  2025-10-27_215740_NB-322-Ch2-2.txt  2025-11-10_173512_NB-336-Ch2-3.txt  2025-11-12_193900_NB-346-Ch2-3.txt  2025-11-13_172722_NB-348-Ch2-3.txt  2025-11-18_211601_NB-351-Ch2-6.txt  2025-11-19_193117_NB-354-Ch2-3.txt  2025-11-19_221828_NB-355-Ch2-2.txt  2025-11-20_230014_NB-356-Ch2-3.txt  2025-11-24_173757_NB-359-Ch2-6.txt  2025-11-25_154722_NB-361-Ch2-3.txt  (+4 more)
figures/: Photoreactor_setup.pptx  Reaction_Scheme_Liquid_Gas.cdxml
(+71 files in other folders)
